# teensy-flight-computer-prototype-LAB

./: LICENSE  README.md  platformio.ini
Qt-GS/: CMakeLists.txt
Qt-GS/src/: main.cpp  mainwindow.cpp  mainwindow.h
Qt-GS/ui/: mainwindow.ui
src/: main.cpp
